--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - my_bridge_network
 
   prometheus:
-    image: prom/prometheus:latest
+    image: andreie/prometheus:latest
     container_name: prometheus
     command: "/bin/prometheus --config.file=/etc/prometheus/prometheus.yml"
     ports:
@@ -22,7 +22,7 @@ services:
       - my_bridge_network
 
   grafana:
-    image: grafana/grafana:latest
+    image: andreie/grafana:latest
     container_name: grafana
     command: "/run.sh"
     ports:
@@ -31,7 +31,7 @@ services:
       - my_bridge_network
 
   custom_jenkins_docker:
-    image: custom-jenkins-docker
+    image: andreie/custom-jenkins-docker:latest
     container_name: custom-jenkins-docker
     command: "/usr/bin/tini -- /usr/local/bin/jenkins.sh"
     ports:
