--- a/Jenkins/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkins/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
         string(name: 'GITHUB_REPO', defaultValue: '4danimals', description: 'GitHub Repository Name')
         string(name: 'DOCKERHUB_USER', defaultValue: 'andreie', description: 'DockerHub Username')
         password(name: 'DOCKERHUB_PASSWORD', defaultValue: 'And0504efR', description: 'DockerHub Password')
-        string(name: 'IMAGE_NAME', defaultValue: 'andreie/4danimals:latest', description: 'Docker Image Name')
+        booleanParam(name: 'RUN_CLEANUP', defaultValue: false, description: 'Run cleanup of resources after pipeline completion')
     }
 
     environment {
@@ -16,7 +16,8 @@ pipeline {
         GITHUB_REPO = "${params.GITHUB_REPO}"
         DOCKERHUB_USER = "${params.DOCKERHUB_USER}"
         DOCKERHUB_PASSWORD = "${params.DOCKERHUB_PASSWORD}"
-        IMAGE_NAME = "${params.IMAGE_NAME}"
+        TIMESTAMP = new Date().format("yyyyMMddHHmmss")
+        IMAGE_NAME = "${params.DOCKERHUB_USER}/4danimals:${env.TIMESTAMP}"
     }
 
     stages {
@@ -45,12 +46,30 @@ pipeline {
         stage('Run Docker Container') {
             steps {
                 script {
+                    // Determine the next available container name
+                    def containerIndex = 1
+                    def containerName = "test_container_${containerIndex}"
+                    while (sh(script: "docker ps -a --format '{{.Names}}' | grep -w ${containerName}", returnStatus: true) == 0) {
+                        containerIndex++
+                        containerName = "test_container_${containerIndex}"
+                    }
+
+                    // Find an available port
+                    def port = 8081
+                    while (sh(script: "docker ps --format '{{.Ports}}' | grep -w ${port}->8080", returnStatus: true) == 0) {
+                        port++
+                    }
+
                     // Run the Docker container
-                    //sh 'docker run -d -p 8081:8080 --name test_container ${IMAGE_NAME}'
-                    sh 'docker run -d --name test_container --network my_bridge_network -p 8081:8080 ${IMAGE_NAME}'
-                    // Wait for 10 seconds to allow the container to start
-                    sleep 10
+                    sh "docker run -d --name ${containerName} --network my_bridge_network -p ${port}:8080 ${IMAGE_NAME}"
+                    // Wait for 20 seconds to allow the container to start
+                    sleep 20
                     echo sh(script: 'docker ps -a', returnStdout: true).trim()
+                    
+                    // Save port and container name for later stages
+                    env.CONTAINER_NAME = containerName
+                    env.PORT = port.toString()
+                    env.CONTAINER_INDEX = containerIndex.toString()
                 }
             }
         }
@@ -59,7 +78,7 @@ pipeline {
             steps {
                 script {
                     // Verify the container is up
-                    def containerStatus = sh(script: 'docker ps -a --filter "name=test_container" --format "{{.Status}}"', returnStdout: true).trim()
+                    def containerStatus = sh(script: "docker ps -a --filter 'name=${env.CONTAINER_NAME}' --format '{{.Status}}'", returnStdout: true).trim()
                     if (containerStatus.contains("Up")) {
                         echo "Container is running: ${containerStatus}"
                     } else {
@@ -69,7 +88,6 @@ pipeline {
             }
         }
 
-
         stage('Test Container') {
             steps {
                 script {
@@ -77,12 +95,15 @@ pipeline {
                     retry(3) {
                         try {
                             // Test the container by sending a GET request to the main page
-                            def response = sh(script: 'curl -s -o /dev/null -w "%{http_code}" http://test_container:8080', returnStdout: true).trim()
+                            def response = sh(script: "curl -s -o /dev/null -w \"%{http_code}\" http://test_container_${env.CONTAINER_INDEX}:8080", returnStdout: true).trim()
+                            echo "curl response: ${response}"  // Add debug information
                             if (response != '200') {
                                 error "Failed to get a 200 response. Got ${response} instead."
+                            } else {
+                                echo "Successfully received a 200 response."
                             }
                         } catch (Exception e) {
-                            echo "Attempt to access container failed. Retrying in 10 seconds..."
+                            echo "Attempt to access container on port ${env.PORT} failed. Retrying in 10 seconds..."
                             sleep 10
                             throw e
                         }
@@ -103,39 +124,29 @@ pipeline {
     }
 
     post {
+        always {
+            script {
+                if (params.RUN_CLEANUP) {
+                    // Stop and remove the Docker container
+                    sh "docker stop ${env.CONTAINER_NAME} || true"
+                    sh "docker rm ${env.CONTAINER_NAME} || true"
+
+                    // Remove all Docker images
+                    sh 'docker rmi $(docker images -q) || true'
+
+                    // Clean up Docker system
+                    sh 'docker system prune -f || true'
+
+                    // Delete the cloned repository
+                    deleteDir()
+                }
+            }
+        }
         success {
             echo 'Pipeline PASSED'
-            script {
-                // Stop and remove the Docker container
-                sh 'docker stop test_container || true'
-                sh 'docker rm test_container || true'
-
-                // Remove all Docker images
-                sh 'docker rmi $(docker images -q) || true'
-
-                // Clean up Docker system
-                sh 'docker system prune -f || true'
-
-                // Delete the cloned repository
-                deleteDir()
-            }
         }
         failure {
             echo 'Pipeline FAILED'
-            script {
-                // Stop and remove the Docker container
-                sh 'docker stop test_container || true'
-                sh 'docker rm test_container || true'
-
-                // Remove all Docker images
-                sh 'docker rmi $(docker images -q) || true'
-
-                // Clean up Docker system
-                sh 'docker system prune -f || true'
-
-                // Delete the cloned repository
-                deleteDir()
-            }
         }
     }
 }
