--- a/Jenkins/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkins/Jenkinsfile
@@ -8,6 +8,7 @@ pipeline {
         string(name: 'DOCKERHUB_USER', defaultValue: 'andreie', description: 'DockerHub Username')
         password(name: 'DOCKERHUB_PASSWORD', defaultValue: 'And0504efR', description: 'DockerHub Password')
         booleanParam(name: 'RUN_CLEANUP', defaultValue: false, description: 'Run cleanup of resources after pipeline completion')
+        booleanParam(name: 'RUN_CLIENT_SIM', defaultValue: false, description: 'Run clientSim.py after pushing Docker image')
     }
 
     environment {
@@ -48,7 +49,7 @@ pipeline {
                 script {
                     // Determine the next available container name
                     def containerIndex = 1
-                    def containerName = "test_container_${containerIndex}"
+                    def containerName = "test_container"
                     while (sh(script: "docker ps -a --format '{{.Names}}' | grep -w ${containerName}", returnStatus: true) == 0) {
                         containerIndex++
                         containerName = "test_container_${containerIndex}"
@@ -95,7 +96,7 @@ pipeline {
                     retry(3) {
                         try {
                             // Test the container by sending a GET request to the main page
-                            def response = sh(script: "curl -s -o /dev/null -w \"%{http_code}\" http://test_container_${env.CONTAINER_INDEX}:8080", returnStdout: true).trim()
+                            def response = sh(script: "curl -s -o /dev/null -w \"%{http_code}\" http://${env.CONTAINER_NAME}:8080", returnStdout: true).trim()
                             echo "curl response: ${response}"  // Add debug information
                             if (response != '200') {
                                 error "Failed to get a 200 response. Got ${response} instead."
@@ -118,6 +119,22 @@ pipeline {
                     // Push the Docker image to DockerHub
                     sh 'echo ${DOCKERHUB_PASSWORD} | docker login -u ${DOCKERHUB_USER} --password-stdin'
                     sh 'docker push ${IMAGE_NAME}'
+                }
+            }
+        }
+
+        stage('Run Client Simulation') {
+            when {
+                expression { return params.RUN_CLIENT_SIM }
+            }
+            steps {
+                script {
+                    // Run clientSim.py for 5 minutes and then stop it
+                    echo "Starting clientSim.py..."
+                    def clientSimProcess = sh(script: "python clientSim.py & echo \$!", returnStdout: true).trim()
+                    sleep(300) // Sleep for 5 minutes (300 seconds)
+                    sh "kill ${clientSimProcess}"
+                    echo "Stopped clientSim.py."
                 }
             }
         }
